# hotline

./: docker-compose.yml
app/: .babelrc  .browserslistrc  .eslintrc  .gitignore  .prettierrc  jest.config.js  package.json  postcss.config.js  stylelint.config.js  tailwind.config.js
app/config/: paths.js
app/config/jest/: styleMock.js
app/config/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
app/src/: App.js  App.test.js  index.js  router.js  template.html
app/src/components/Footer/: Footer.js
app/src/components/Header/: Header.js
app/src/components/form/: Select.js
app/src/mocks/: hotlines.js
app/src/pages/home/: Home.js
app/src/pages/hotlines/all/: AllHotlines.js  index.js
app/src/pages/hotlines/dashboard/: Dashboard.js
app/src/pages/hotlines/new/: NewHotline.js  index.js
app/src/services/: formContext.js
app/src/styles/: index.scss
client/: home.html  hotline-list.js  preflight.css  sweet-alerts.html
db/: 1-create-security-schema.sql  2-create-hotline-schema.sql
server/: Dockerfile  alembic.ini  config.py  pyproject.toml
server/app/: main.py
server/app/api/: api.py  deps.py
server/app/api/endpoints/: login.py  users.py
server/app/core/: security.py
server/app/crud/: __init__.py  base.py  crud_user.py
server/app/db/: base.py  base_class.py  session.py
server/app/models/: user.py
server/app/schemas/: __init__.py  token.py  user.py
server/migrations/: env.py
server/migrations/versions/: 9b89d4699b3a_add_user_table.py
server/tests/: conftest.py  test_main.py
